--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <td>Title</td>
       <td>Author</td>
       <td>Pages</td>
-      <td>Read</td>
-      <td></td>
+      <td>Read?</td>
+      <td>Delete</td>
     </tr>
   </table>
 
